--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,11 +1,13 @@
-@base-color: ;
-@body-bg: ;
+@base-color: #4bcaff;
+@grey-color: #515f67;
+@body-bg: desaturate(red, 10%)  ;
 @body-color: ;
 @link-color: ;
-@body-font-size: ;
+@body-font-size: 16px;
 
-@pathToIcon: "..img/icons/";
-
+@img-folder: "../img/";                //путь до каринок
+@pathToIcon: "../img/icons/";          //путь до иконок
+@font-folder: "../fonts/";             //путь к шрифтам
 
 
 
