--- a/src/less/style.less
+++ b/src/less/style.less
@@ -120,12 +120,26 @@ body {
     text-align: center;
     background: linear-gradient(to bottom, #8429bd, #6d1c85);
     border-radius: 10px;
-    box-shadow: 0 5px 5px #000;
+    box-shadow: 0 2px 2px #000;
   }  
+}
+.layout-columns {
+  .clearfix();
+  .layout-column-left,
+  .layout-column-right {
+    width: 50%;    
+  }
+  .layout-column-left {
+    float: left;
+  }
+  .layout-column-right {
+    float: right;
+  }
 }
 .product {
   padding-left: 230px;;
   background: url("../img/product.png") no-repeat left top;
+  background-size: 35%;
   .description {
     &-list {
       margin: 0;
@@ -148,4 +162,108 @@ body {
       }
     }
   }
+}
+.order-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 18px;
+  width: 349px;
+  border: 2px solid #3d0b63;
+  text-align: center;
+  color: #fff;
+  background-color: @violet; 
+  border-radius: 5px;
+}
+.order-title {
+  margin: 0;
+  font-size: 36px;
+  line-height: 1.1;
+  letter-spacing: -1px;
+  margin-bottom: 20px;
+  sup {
+    font-size: 20px;
+  }
+}
+.order-subtitle {
+  position: relative;
+  margin: 0;
+  font-size: 20px;
+  line-height: 1.2;
+  margin-bottom: 22px;
+  .flag-forever {
+    font-size: 16px;
+    position: absolute;
+    padding: 5px;
+    right: -5px;
+    bottom: -20px;
+    transform: rotate(-10deg);
+    background-color: #a81c4f;
+    border-radius: 2px;
+  }
+}
+.price-wrapper {
+  padding: 11px 15px;
+  text-align: center;
+  background-color: #49186d;
+  border-radius: 35px;
+  .order-price {
+    font-size: 36px;
+    line-height: 1.1;
+    font-weight: 500;
+    color: #b8ee42;
+    margin: 0;
+    span {
+      color: #af2d48;
+    }
+  }
+  .order-price-decription {
+    margin: 0;
+    font-size: 14px;
+    line-height: 1.2;
+    color: #966d3d;
+  }
+}
+
+.order-form {  
+  .order-btn {
+    display: block;
+    color: #000;
+    padding: 14px 10px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    font-size: 18px;
+    line-height: 1.1;
+    font-weight: bold;
+    background: linear-gradient(to bottom, #e3f036, #8fc21f);
+    box-shadow: 0 2px 2px #000;
+  }
+  &-wrapper {
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+  &-field {    
+    text-align: center;
+    padding: 13px 13px;
+    width: 100%;
+    font-family: "Clean Sans", "Arial", sans-serif;
+    font-size: 20px;
+    line-height: 1.2;
+    background: linear-gradient(to bottom, #d8d8d8, #fff);
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    box-sizing: border-box;
+
+  }
+}
+.uppercase {
+  text-transform: uppercase;
+}
+.through {
+  text-decoration: line-through;
+}
+.red {
+  color: #a31f28;
 }
