--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -9,7 +9,9 @@
 @pathToIcon: "../img/icons/";          //путь до иконок
 @font-folder: "../fonts/";             //путь к шрифтам
 
-
+@phone: ~"(max-width: 767px)";
+@tablet: ~"(max-width: 992px)";
+@desktop: ~"(max-width: 1199px)";
 
 
 //Работа с цветами
