--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -9,6 +9,7 @@
 @pathToIcon: "../img/icons/";          //путь до иконок
 @font-folder: "../fonts/";             //путь к шрифтам
 
+@small: ~"(max-width: 575px)";
 @phone: ~"(max-width: 767px)";
 @tablet: ~"(max-width: 992px)";
 @desktop: ~"(max-width: 1199px)";
